# db-sniffer

./: .gitignore  Cargo.toml  LICENSE  README.md  build-containers.sh  dbempresa.sqlite  docker-compose.yml  installer.sh
.github/workflows/: ci-cd.yml  publish.yml
.tmp/EmpresaHBU4A1anotac/: build.xml
containers/: build.sh  db_creation.sql  mssql.dockerfile  mssql_db_creation.sql  mssql_init.sh  mysql.dockerfile  mysql_db_creation.sql  run.sh  stop.sh
crates/cli/: Cargo.toml
crates/db-sniffer/: .gitignore  Cargo.toml
crates/db-sniffer/src/: error.rs  lib.rs  naming.rs
crates/db-sniffer/src/db_objects/: mod.rs
crates/db-sniffer/src/generators/: hibernate.rs  mod.rs  sql_ddl.rs
crates/db-sniffer/src/generators/hibernate/: jpa.rs  mod.rs  xml.rs
crates/db-sniffer/src/generators/java/: mod.rs
crates/db-sniffer/src/sniffers/: mod.rs  mssql.rs  mysql.rs
crates/db-sniffer/src/test_utils/: mod.rs  mysql.rs
crates/db-sniffer/test_resources/: hibernate-maven-com.example.main.java
crates/db-sniffer/tests/: hibernate_xml_mssql.rs  hibernate_xml_mysql.rs  sniffers_eq_results.rs
crates/db-sniffer/tests/containers/: mod.rs  mssql.rs  mysql.rs
crates/db-sniffer/tests/hibernate/: mod.rs
crates/db-sniffer/tests/logs/: mod.rs
crates/db-sniffer/tests/maven/: mod.rs
crates/db-sniffer/tests/test_dir/: mod.rs
crates/dotjava/: Cargo.toml
crates/macros/: Cargo.toml
sql/: testing_mysql_db.sql
test_resources/: db_creation.sql  mssql.dockerfile  mssql_init.sh  mysql.dockerfile
test_resources/complex_hibernate_xml_and_pojos/: db_creation.sql
(+75 files in other folders)
