[package]
name = "db-sniffer"
version = "0.1.0"
edition = "2021"

[dependencies]
# mysql and sqlite support
sqlx = { version = "0.8.2", features = ["mysql", "runtime-tokio"]}
# mssql support
tiberius= { version = "0.12.3" }
regex = { version = "1.11.1" }
tokio = { workspace = true }
getset = { version = "0.1.3" }

[dev-dependencies]
dotenvy = { version = "0.15.7" }