[package]
name = "db-sniffer"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.2", features = ["mysql", "runtime-tokio"]}
tiberius= { version = "0.12.3", features = ["tokio"] }
regex = { version = "1.11.1" }
tokio = { workspace = true }
tokio-util = { version = "0.7.13", features = ["compat"] }
getset = { version = "0.1.3" }
dotjava = { path = "../dotjava"}

[dev-dependencies]
dotenvy = { version = "0.15.7" }